syntax = "proto3";

package http.user;

import "google/api/annotations.proto";

option go_package = "wuzigoweb/api/http/user;user";

service User {
  // 用户注册
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/v1/user/register",
      body: '*',
    };
  }

  // 用户端登录
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/user/login",
      body: '*'
    };
  }

  rpc List (ListRequest) returns (ListReply) {
    option (google.api.http) = {
      post: "/v1/user/list",
      body: '*'
    };
  }

  rpc GetCurrentUser (GetCurrentUserRequest) returns (GetCurrentUserReply) {
    option (google.api.http) = {
      post: "/v1/user/getuser",
      body: '*'
    };
  }
}

// Register 用户注册
// 前端传来的请求
message RegisterRequest {
  string account = 1;
  string password = 2;
  string checkPassword = 3;
}

// 返回前端的请求
message RegisterReply {
  int64 id = 1;
}

// Register 用户登录
// 前端传来的请求
message LoginRequest {
  string account = 1;
  string password = 2;
}

// 返回前端的请求
message LoginReply {
  int64 id = 1;
  string token = 2;
}

message ListRequest {
  int64 id = 1;
}

message ListReply {
  string username = 1;
  string avatarUrl = 2;
  string userInfo = 3;
}

message GetCurrentUserRequest {
}

message GetCurrentUserReply {
  string account = 1;
  string password = 2;
  string username = 3;
  string avatarUrl = 4;
  int32 gender = 5;
  string userInfo = 6;
  int32 userRole = 7;
}
